--- a/LeetCodePlayground/LeetCodePlayground.vcxproj
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj
@@ -145,11 +145,13 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="279.h" />
     <ClInclude Include="752.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="279.cpp" />
     <ClCompile Include="752.cpp" />
     <ClCompile Include="LeetCodePlayground.cpp" />
     <ClCompile Include="stdafx.cpp">
