--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="752.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="279.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="752.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="279.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
