--- a/LeetCodePlayground/LeetCodePlayground.vcxproj
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj
@@ -146,12 +146,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="279.h" />
+    <ClInclude Include="394.h" />
     <ClInclude Include="752.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="279.cpp" />
+    <ClCompile Include="394.cpp" />
     <ClCompile Include="752.cpp" />
     <ClCompile Include="LeetCodePlayground.cpp" />
     <ClCompile Include="stdafx.cpp">
