--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="279.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="394.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +45,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="279.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="394.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
