--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="394.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Interview0108.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="394.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Interview0108.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
