--- a/LeetCodePlayground/LeetCodePlayground.vcxproj
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj
@@ -145,6 +145,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="118.h" />
     <ClInclude Include="279.h" />
     <ClInclude Include="394.h" />
     <ClInclude Include="752.h" />
@@ -153,6 +154,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="118.cpp" />
     <ClCompile Include="279.cpp" />
     <ClCompile Include="394.cpp" />
     <ClCompile Include="752.cpp" />
