--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Interview0108.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="118.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -54,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Interview0108.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="118.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
