--- a/LeetCodePlayground/LeetCodePlayground.vcxproj
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj
@@ -149,12 +149,14 @@
     <ClInclude Include="279.h" />
     <ClInclude Include="394.h" />
     <ClInclude Include="752.h" />
+    <ClInclude Include="functions.h" />
     <ClInclude Include="Interview0108.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="118.cpp" />
+    <ClCompile Include="220.cpp" />
     <ClCompile Include="279.cpp" />
     <ClCompile Include="394.cpp" />
     <ClCompile Include="752.cpp" />
