--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="118.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="functions.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -60,6 +63,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="118.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="220.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
