--- a/LeetCodePlayground/LeetCodePlayground.vcxproj
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="118.cpp" />
     <ClCompile Include="220.cpp" />
     <ClCompile Include="279.cpp" />
+    <ClCompile Include="332.cpp" />
     <ClCompile Include="394.cpp" />
     <ClCompile Include="752.cpp" />
     <ClCompile Include="Interview0108.cpp" />
