--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClCompile Include="220.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="332.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
