--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClCompile Include="332.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="557.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
