--- a/LeetCodePlayground/LeetCodePlayground.vcxproj
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="279.cpp" />
     <ClCompile Include="332.cpp" />
     <ClCompile Include="394.cpp" />
+    <ClCompile Include="557.cpp" />
     <ClCompile Include="752.cpp" />
     <ClCompile Include="Interview0108.cpp" />
     <ClCompile Include="LeetCodePlayground.cpp" />
