--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -77,5 +77,8 @@
     <ClCompile Include="ZTE_1.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="baidu_3.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
