--- a/LeetCodePlayground/LeetCodePlayground.vcxproj
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="394.cpp" />
     <ClCompile Include="557.cpp" />
     <ClCompile Include="752.cpp" />
+    <ClCompile Include="baidu_3.cpp" />
     <ClCompile Include="Interview0108.cpp" />
     <ClCompile Include="LeetCodePlayground.cpp" />
     <ClCompile Include="stdafx.cpp">
