--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClCompile Include="zx_2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="39.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
