--- a/LeetCodePlayground/LeetCodePlayground.vcxproj
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="394.cpp" />
     <ClCompile Include="557.cpp" />
     <ClCompile Include="752.cpp" />
+    <ClCompile Include="algrthm_sort.cpp" />
     <ClCompile Include="baidu_3.cpp" />
     <ClCompile Include="Interview0108.cpp" />
     <ClCompile Include="LeetCodePlayground.cpp" />
