--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -113,5 +113,8 @@
     <ClCompile Include="algrthm_happyhoursort.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="algrthm_quicksort_od.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
