华为二面 力扣739 每日温度

--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -128,5 +128,8 @@
     <ClCompile Include="..\..\Huawei_Interview\Huawei_Interview\Huawei_Interview.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="huawei_interview2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
