--- a/LeetCodePlayground/LeetCodePlayground.vcxproj
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="baidu_3.cpp" />
     <ClCompile Include="algrthm_bubblesort.cpp" />
     <ClCompile Include="dahua_1.cpp" />
+    <ClCompile Include="huawei_interview2.cpp" />
     <ClCompile Include="Interview0108.cpp" />
     <ClCompile Include="LeetCodePlayground.cpp" />
     <ClCompile Include="netease_1.cpp" />
