--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -125,10 +125,10 @@
     <ClCompile Include="820.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Huawei_Interview\Huawei_Interview\Huawei_Interview.cpp">
+    <ClCompile Include="huawei_interview2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="huawei_interview2.cpp">
+    <ClCompile Include="844.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
