--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -131,5 +131,14 @@
     <ClCompile Include="844.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="h3c_1.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="offer49.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="973.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
