--- a/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj.filters
@@ -140,5 +140,8 @@
     <ClCompile Include="973.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="134.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
