--- a/LeetCodePlayground/LeetCodePlayground.vcxproj
+++ b/LeetCodePlayground/LeetCodePlayground.vcxproj
@@ -158,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="118.cpp" />
+    <ClCompile Include="134.cpp" />
     <ClCompile Include="220.cpp" />
     <ClCompile Include="279.cpp" />
     <ClCompile Include="332.cpp" />
